@@ -212,7 +212,7 @@ def main():
             pass                        
         else:
             (action, action_option, matching_line) = outfilter.firstmatch(address)
-        if not action:action = Defaults.COOKIE_TYPE
+        if not action:action = string.lower(Defaults.ACTION_OUTGOING)
         # The message is sent to each recipient separately so that
         # everyone gets the correct tag.  Make sure your MUA
         # generates its own Message-ID: and Date: headers so they
