@@ -1,3 +1,8 @@
+2001-11-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add ACTION_INCOMING and ACTION_OUTGOING, and
+	remove COOKIE_TYPE.
+
 2001-11-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* sample.tmdarc: Remove: BOUNCE_BLACKLIST_CC, BOUNCE_CONFIRM_CC,
